--- a/portfolio.html
+++ b/portfolio.html
@@ -20,38 +20,42 @@
   </head>
   <body>
     <!--Header section-->
-    <div class="portfolio-header-container container">
+    <div class="page-container">
       <header class="header">
-        <nav class="portfolio-header-navigation">
-          <a class="header-logo link" href="./index.html"
-            >Web<span class="accent">Studio</span></a
-          >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="header-list list">
-            <li class="address-item">
-              <a class="contacts-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="contacts-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="header-container container">
+          <nav class="header-navigation">
+            <a class="header-logo link" href="./index.html"
+              >Web<span class="accent">Studio</span></a
+            >
+            <ul class="header-list list">
+              <li class="header-item">
+                <a class="header-link link" href="./index.html">Studio</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header-item">
+                <a class="header-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">
+            <ul class="header-list list">
+              <li class="address-item">
+                <a class="contacts-link link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="contacts-link link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <!--Main block-->
       <main>
